保存新的修改

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <div><img src="/图片/1.jpg" alt=""></div>
     <h1>我是修改的部分</h1>
+    <span> 通过git status 查看文件状态</span>
+    <div>通过git add index.html 添加到工作区</div>
+    <div>通过git init新建git仓库</div>
+    <div>通过git commit -m 提交到仓库</div>
 </body>
 </html>
