新增了index.js和index.css，并且修改了index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <div><img src="/图片/1.jpg" alt=""></div>
     <h1>我是修改的部分</h1>
     <span> 通过git status 查看文件状态</span>
-    <div>通过git add index.html 添加到工作区</div>
+    <div>通过git add index.html 添加到暂存区</div>
     <div>通过git init新建git仓库</div>
     <div>通过git commit -m 提交到仓库</div>
+    <div>通过git checkout -- index.html  把修改的未保存的文件直接复原为仓库里的文件</div>
+    <div>通过git add . 将多个文件加入暂存区</div>
+    <div>通过git reset HEAD index.html 将文件移出暂存区</div>
 </body>
 </html>
