--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div>通过git commit -m 提交到仓库</div>
     <div>通过git checkout -- index.html  把修改的未保存的文件直接复原为仓库里的文件</div>
     <div>通过git add . 将多个文件加入暂存区</div>
-    <div>通过git reset HEAD index.html 将文件移出暂存区</div>
+    <div>通过git reset HEAD index.html 将文件移出暂存区  后面加一个. 移除多个</div>
 </body>
 </html>
