跳过暂存区直接提交

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div>通过git checkout -- index.html  把修改的未保存的文件直接复原为仓库里的文件</div>
     <div>通过git add . 将多个文件加入暂存区</div>
     <div>通过git reset HEAD index.html 将文件移出暂存区  后面加一个. 移除多个</div>
+    <div>通过 git commit -a -m "提交的消息"  跳过暂存区直接把工作区提交到仓库</div>
 </body>
 </html>
