--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <div>通过git add . 将多个文件加入暂存区</div>
     <div>通过git reset HEAD index.html 将文件移出暂存区  后面加一个. 移除多个</div>
     <div>通过 git commit -a -m "提交的消息"  跳过暂存区直接把工作区提交到仓库</div>
+    <div>通过git rm -f index.css 从git仓库和工作区中同时移除index.js 文件</div>
+    <div>通过git rm --cache index.css 只从仓库中移除index.css 保留工作区的index.css文件</div>
 </body>
 </html>
